--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -135,13 +135,13 @@ button::-moz-focus-inner {
   text-decoration: none;
   text-align: center;
   opacity: 1;
-  filter: alpha(opacity=100);
+  filter: alpha(opacity=50);
   padding: 0 0 18px 10px;
   color: #FFF;
   font-style: normal;
   font-size: 28px;
   font-family: Arial, Baskerville, monospace; 
-  background:url(../images/icons/bg-close@2x.png) center no-repeat #fff; background-size:36px 36px; }
+  background:url(../image/bg-close@2x.png) center no-repeat #fff; background-size:36px 36px; }
   .mfp-close:hover,
   .mfp-close:focus {
     opacity: 1;
