--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -131,7 +131,7 @@ button::-moz-focus-inner {
   line-height: 44px;
   position: absolute;
   right: 0;
-  bottom: 0;
+  top: 0;
   text-decoration: none;
   text-align: center;
   opacity: 1;
