--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
 --------------------------------------------------------------------------------------------------------*/
 .left-corner-wrapper { position:absolute; left:0; top:0; }
 
-#menu-button { font-size:13px; display:block; height:50px; /*position: absolute;*/ -webkit-tap-highlight-color: rgba(0, 0, 0, 0); z-index:202; /*top:95px; left:0px;*/ position:relative; margin-top:5px; }
+#menu-button { font-size:13px; display:block; height:50px; /*position: absolute;*/ -webkit-tap-highlight-color: rgba(0, 0, 0, 0); z-index:202; /*top:95px; left:0px;*/ position:fixed; margin-top:5px; }
 #menu-button .centralizer { display: table-cell; vertical-align: middle; }
 #nav-button { display:inline-block; width:50px; height:50px; margin:0; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); padding:18px 15px 0 15px; cursor:pointer; background:#fff; -webkit-transition: all 0.2s ease 0s; transition: all 0.2s ease 0s;}
 #nav-button:hover { width:60px; padding:18px 15px 0 25px; -webkit-transition: all 0.2s ease 0s; transition: all 0.2s ease 0s;}
