--- a/css/contact.css
+++ b/css/contact.css
@@ -7,16 +7,17 @@ textarea { resize: none; }
 .loader { display:none; }
 /* Form Element Styling */
 .contact > .elem-content {background:#fff !important }
-.form-part { padding: 0; margin-top:0px;  }
-.form-part > textarea, .form-part > select, .form-part > input:not([type="submit"]):not([type="image"]):not([type="button"]):not([type="checkbox"]):not([type="radio"]) {
+.gform pure-form pure-form-stacked { padding: 0; margin-top:0px;  }
+.gform pure-form pure-form-stacked > textarea, .form-part > select, .form-part > input:not([type="submit"]):not([type="image"]):not([type="button"]):not([type="checkbox"]):not([type="radio"]) {
  padding: 17px 18px 18px 18px; width: 100%; margin-bottom: 10px; border:1px solid #d8d8d8; text-align: center; font-style: normal; line-height: 20px; background:#f5f5f5;
 }
 .grey .form-part > textarea, .grey .form-part > select, .grey .form-part > input:not([type="submit"]):not([type="image"]):not([type="button"]):not([type="checkbox"]):not([type="radio"]) { border:1px solid #fff; }
-.form-part > input:focus, .form-part > textarea:focus { }
-.form-part > textarea { height: 174px; resize: none; }
-.form-part > .input-wrapper { position: relative;  }
+.gform pure-form pure-form-stacked > input:focus, .form-part > textarea:focus { }
+.gform pure-form pure-form-stacked > textarea { height: 174px; resize: none; }
+.gform pure-form pure-form-stacked > .input-wrapper { position: relative;  }
 .send-btn { margin-top: 25px !important; }
 #reservation-section .send-btn { margin-top:0 !important; }
 .comment-form-wrapper .send-btn { float:right }
 
 .honeypot-field { display: none; }
+.thankyou_message {font: 24px 'Lato', Arial, Helvetica, sans-serif; color:#777;}
