--- a/css/contact.css
+++ b/css/contact.css
@@ -19,11 +19,11 @@ textarea { resize: none; }
 
 .gform { padding: 0; margin-top:0px;  }
 
-.form-part > textarea, .form-part > select, .form-part > input:not([type="submit"]):not([type="image"]):not([type="button"]):not([type="checkbox"]):not([type="radio"]) {
+.gform > textarea, .gform > select, .gform > input:not([type="submit"]):not([type="image"]):not([type="button"]):not([type="checkbox"]):not([type="radio"]) {
  padding: 17px 18px 18px 18px; width: 100%; margin-bottom: 10px; border:1px solid #d8d8d8; text-align: center; font-style: normal; line-height: 20px; background:#f5f5f5;
 }
-.grey .form-part > textarea, .grey .form-part > select, .grey .form-part > input:not([type="submit"]):not([type="image"]):not([type="button"]):not([type="checkbox"]):not([type="radio"]) { border:1px solid #fff; }
-.gform > input:focus, .form-part > textarea:focus { }
+.grey .gform > textarea, .grey .gform > select, .grey .gform > input:not([type="submit"]):not([type="image"]):not([type="button"]):not([type="checkbox"]):not([type="radio"]) { border:1px solid #fff; }
+.gform > input:focus, .gform > textarea:focus { }
 .gform > textarea { height: 174px; resize: none; }
 .gform > .input-wrapper { position: relative;  }
 .send-btn { margin-top: 25px !important; }
@@ -31,4 +31,4 @@ textarea { resize: none; }
 .comment-form-wrapper .send-btn { float:right }
 
 .honeypot-field { display: none; }
-.thankyou_message {font: 24px 'Lato', Arial, Helvetica, sans-serif; color:#777;}
+.gform > thankyou_message {font: 24px 'Lato', Arial, Helvetica, sans-serif; color:#777;}
