--- a/css/contact.css
+++ b/css/contact.css
@@ -26,4 +26,4 @@ textarea { resize: none; }
 .comment-form-wrapper .send-btn { float:right }
 
 .honeypot-field { display: none; }
-.thankyou_message {font: 12px 'Lato', Arial, Helvetica, sans-serif; color:#777;}
+.thankyou_message {font: 12px; color:#777;}
