--- a/css/contact.css
+++ b/css/contact.css
@@ -13,21 +13,19 @@ textarea { resize: none; }
 
 /* Form Element Styling */
 .contact > .elem-content {background:#fff !important }
-.form-part { padding: 0; margin-top:0px;  }
-.form-part > textarea, .form-part > select, .form-part > input:not([type="submit"]):not([type="image"]):not([type="button"]):not([type="checkbox"]):not([type="radio"]) {
+.form-elements { padding: 0; margin-top:0px;  }
+.form-elements > textarea, .form-elements > select, .form-elements > input:not([type="submit"]):not([type="image"]):not([type="button"]):not([type="checkbox"]):not([type="radio"]) {
  padding: 17px 18px 18px 18px; width: 100%; margin-bottom: 10px; border:1px solid #d8d8d8; text-align: center; font-style: normal; line-height: 20px; background:#f5f5f5;
 }
-.grey .form-part > textarea, .grey .form-part > select, .grey .form-part > input:not([type="submit"]):not([type="image"]):not([type="button"]):not([type="checkbox"]):not([type="radio"]) { border:1px solid #fff; }
-.form-part > input:focus, .form-part > textarea:focus { }
-.form-part > textarea { height: 174px; resize: none; }
-.form-part > .input-wrapper { position: relative;  }
+.grey .form-elements > textarea, .grey .form-elements > select, .grey .form-elements > input:not([type="submit"]):not([type="image"]):not([type="button"]):not([type="checkbox"]):not([type="radio"]) { border:1px solid #fff; }
+.form-elements > input:focus, .form-elements > textarea:focus { }
+.form-elements > textarea { height: 174px; resize: none; }
+.form-elements > .input-wrapper { position: relative;  }
 .send-btn { margin-top: 25px !important; }
 #reservation-section .send-btn { margin-top:0 !important; }
 .comment-form-wrapper .send-btn { float:right }
 
-.name-field { display: none; }
-.email-field { display: none; }
-.message-field { display: none; }
+
 .honeypot-field { display: none; }
 
 
