--- a/css/contact.css
+++ b/css/contact.css
@@ -9,7 +9,7 @@ input, textarea, select {
  display:block; 
  margin:0px; 
  -webkit-appearance: none; 
- background:none
+ background:none;
 }
 textarea { 
  resize: none;
@@ -41,19 +41,27 @@ textarea {
 .contact > .elem-content {
  background:#fff !important
 }
-.form-part { 
+.form-elements { 
  padding: 0; margin-top:0px;
 }
-.form-part > textarea, .form-part > select, .form-part > input:not([type="submit"]):not([type="image"]):not([type="button"]):not([type="checkbox"]):not([type="radio"]) {
- padding: 17px 18px 18px 18px; width: 100%; margin-bottom: 10px; border:1px solid #d8d8d8; text-align: center; font-style: normal; line-height: 20px; background:#f5f5f5;
+.form-elements > textarea, .form-elements > select, .form-elements > input:not([type="submit"]):not([type="image"]):not([type="button"]):not([type="checkbox"]):not([type="radio"]) {
+ padding: 17px 18px 18px 18px; 
+ width: 100%; 
+ margin-bottom: 10px; 
+ border:1px solid #d8d8d8; 
+ text-align: center; 
+ font-style: normal; 
+ line-height: 20px; 
+ background:#f5f5f5;
 }
-.grey .form-part > textarea, .grey .form-part > select, .grey .form-part > input:not([type="submit"]):not([type="image"]):not([type="button"]):not([type="checkbox"]):not([type="radio"]) { border:1px solid #fff;
+.grey .form-elements > textarea, .grey .form-elements > select, .grey .form-elements > input:not([type="submit"]):not([type="image"]):not([type="button"]):not([type="checkbox"]):not([type="radio"]) { 
+ border:1px solid #fff;
 }
-.form-part > input:focus, .form-part > textarea:focus { }
-.form-part > textarea { 
+.form-elements > input:focus, .form-part > textarea:focus { }
+.form-elements > textarea { 
  height: 174px; resize: none;
 }
-.form-part > .input-wrapper { 
+.form-elements > .input-wrapper { 
  position: relative;
 }
 .send-btn { 
