--- a/css/contact.css
+++ b/css/contact.css
@@ -73,5 +73,8 @@ textarea {
 .comment-form-wrapper .send-btn { 
  float:right
 }
-
+.thankyou_message {
+ font-family: "Lato",'Open Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif; 
+ font-size: 20px;
+}
 
