--- a/css/contact.css
+++ b/css/contact.css
@@ -51,7 +51,7 @@ textarea {
  border:1px solid #d8d8d8; 
  text-align: center; 
  font-style: normal; 
- line-height: 20px; 
+ line-height: 18px; 
  background:#f5f5f5;
 }
 .grey .pure-group > textarea, .grey .pure-group > select, .grey .pure-group > input:not([type="submit"]):not([type="image"]):not([type="button"]):not([type="checkbox"]):not([type="radio"]) { 
@@ -59,7 +59,9 @@ textarea {
 }
 .pure-group > input:focus, .pure-group > textarea:focus { }
 .pure-group > textarea { 
- height: 174px; resize: none;
+ height: 174px; 
+ resize: none;
+ text-align: left; 
 }
 .pure-group > .input-wrapper { 
  position: relative;
