--- a/css/contact.css
+++ b/css/contact.css
@@ -79,5 +79,6 @@ textarea {
 .thankyou_message {
  font-family: "Lato",'Open Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif; 
  font-size: 20px;
+ color:#000000;
 }
 
