--- a/css/styles.css
+++ b/css/styles.css
@@ -199,10 +199,9 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
  display: none;
 }
 
-.contact-list {position:absolute; top:500px;}
-.contact-list {border-left: 5px solid black; height: 100px; position: absolute; top:500px; left:50px; margin-left: -3px;}
-.contact-list > li > i {padding:10px 0px 10px 0px;} 
-.contact-list > i { text-decoration:none; color:#000000; font-size:16px; padding:3px 0px 3px; font-weight:600;}
+.contact-list {border-left: 3px solid black; height: 70px; position: absolute; top:300px; left:50px; margin-left: -3px;}
+.contact-list > li > i {padding:10px 0px 100px 0px;} 
+.contact-list > i { color:#000000; font-size:16px; padding:3px 0px 3px; font-weight:600;}
 
 #social-header { background:#fff; position:absolute; z-index:200; right:0; top:0; padding:15px 12px 0; /*width:50px; text-align:center*/ height:50px; }
 /* End Main Nav
