--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,11 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
 --------------------------------------------------------------------------------------------------------*/
 .left-corner-wrapper { position:absolute; left:0; top:0; }
 
+.bio-list > h1 {border-top: 3px solid black;position: relative; margin-left: 10px; margin-top: -5px;}
+.bio-list {border-left: 3px solid black; position: relative; height: 80px; top:20px; left:20px; margin-left: -3px;}
+.bio-list > li > i {font-size:14px; padding:10px 0px 5px 0px;} 
+.bio-list > i { color:#000000; font-size:16px; padding:3px 0px 3px; font-weight:600; padding:padding:0px 0px 100px 0px;}
+
 #menu-button { font-size:13px; display:block; height:50px; /*position: absolute;*/ -webkit-tap-highlight-color: rgba(0, 0, 0, 0); z-index:202; /*top:95px; left:0px;*/ position:fixed; margin-top:5px; }
 #menu-button .centralizer { display: table-cell; vertical-align: middle; }
 #nav-button { display:inline-block; width:50px; height:50px; margin:0; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); padding:18px 15px 0 15px; cursor:pointer; background:#fff; -webkit-transition: all 0.2s ease 0s; transition: all 0.2s ease 0s;}
@@ -198,11 +203,6 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
 .pushed-left #nav-button span:nth-child(3), .pushed-left-alt #nav-button span:nth-child(3) {
  display: none;
 }
-
-.bio-list > h1 {border-top: 3px solid black; margin-left: 10px; margin-top: -50px;}
-.bio-list {border-left: 3px solid black; height: 80px; position: absolute; top:20px; left:20px; margin-left: -3px;}
-.bio-list > li > i {font-size:14px; padding:10px 0px 5px 0px;} 
-.bio-list > i { color:#000000; font-size:16px; padding:3px 0px 3px; font-weight:600; padding:padding:0px 0px 100px 0px;}
 
 #social-header { background:#fff; position:absolute; z-index:200; right:0; top:0; padding:15px 12px 0; /*width:50px; text-align:center*/ height:50px; }
 /* End Main Nav
