--- a/css/styles.css
+++ b/css/styles.css
@@ -199,9 +199,28 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
  display: none;
 }
 
-.bio-list {border-left: 3px solid black; position: relative; top:30px; height: 70px;}
-.bio-list > li > i {font-size:14px; padding:0px 0px 10px 0px;} 
-.bio-list > i { color:#000000; font-size:16px; font-weight:600; padding:0px 0px 0px 0px;}
+.bio-list {
+  border-left: 3px solid black; 
+  position: relative; 
+  top:30px; 
+  height: 70px;
+  }
+.line-2 {
+  border-left: 3px solid black; 
+  position: relative; 
+  top:30px; 
+  height: 70px;
+  margin-left: 225px;
+  margin-top: -85px;
+  }
+.bio-list > li > i {
+  font-size:14px; 
+  } 
+.bio-list > a { 
+  color:#000000; 
+  font-size:16px; 
+  font-weight:600;
+  }
 
 #social-header { background:#fff; position:absolute; z-index:200; right:0; top:0; padding:15px 12px 0; /*width:50px; text-align:center*/ height:50px; }
 /* End Main Nav
