--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,10 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
   font-weight:600;
   text-align: left;
  }
+.b4 {
+  font size: 14px;
+  text-align: right;
+ }
 
 #social-header { background:#fff; position:absolute; z-index:200; right:0; top:0; padding:15px 12px 0; /*width:50px; text-align:center*/ height:50px; }
 /* End Main Nav
