--- a/css/styles.css
+++ b/css/styles.css
@@ -215,8 +215,10 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
  }
 .b4 {
   font size: 14px;
-  text-align: right;
+  position: relative;
+  left: 30px;
   color: #888;
+  font-weight: 400;
  }
 
 #social-header { background:#fff; position:absolute; z-index:200; right:0; top:0; padding:15px 12px 0; /*width:50px; text-align:center*/ height:50px; }
