--- a/css/styles.css
+++ b/css/styles.css
@@ -202,8 +202,9 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
 .profile {
   border-radius: 50%;
   width: 100px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
   text-align: center;
+  position: relative;
 }
 .b1 {
   border-left: 3px solid black; 
