--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
   position: relative; 
   top: 30px; 
   left: 30px;
-  font size: 12px;
+  font-size: 12px;
  }
 .b2, b3 { 
   color: #000000; 
@@ -218,7 +218,7 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
   font-weight: 600;
  }
 .b4 {
-  font size: 12px;
+  font-size: 12px;
   position: relative;
   left: -5px;
   color: #888;
