--- a/css/styles.css
+++ b/css/styles.css
@@ -204,7 +204,7 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
   width: 100px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
   position: relative;
-  left: 30px
+  left: 30px;
 }
 .b1 {
   position: relative; 
