--- a/css/styles.css
+++ b/css/styles.css
@@ -205,21 +205,22 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
   position: relative;
 }
-.b1 {
+.bio-list .b1 {
   position: relative; 
-  top: 30px; 
-  left: 100px;
+  top: 10px;
   font-size: 14px;
+  color: #888;
+  font-weight: 400;
+  left: -45px;
  }
-.b2, b3 { 
+.bio-list .b2, b3 { 
   color: #000000; 
   font-size: 16px; 
   font-weight: 600;
- }
-.b4 {
+ } 
+.bio-list .b4 {
   font-size: 14px;
   position: relative;
-  left: -1px;
   color: #888;
   font-weight: 400;
  }
