--- a/css/styles.css
+++ b/css/styles.css
@@ -206,6 +206,11 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
   position: relative;
   left: 30px;
 }
+.bio-list {
+ text-align: center;
+ position:relative;
+ top: 10px;
+ }
 .bio-list .b1 {
   font-size: 14px;
   color: #888;
