--- a/css/styles.css
+++ b/css/styles.css
@@ -470,7 +470,7 @@ img { width:auto; max-width: 100%; z-index:9; box-shadow: #fff 0 0 0 }
 .videos {  border:0; height:350px; width:620px }
 .videoWrapper { position:relative; padding-bottom:56.25%; /* 16:9 */ height:0; }
 .videoWrapper iframe { position:absolute; top:0; left:0; width:100%; height:100%; }
-.videoWrapper2 { position:relative; padding-bottom:42.55%; /* 2.35 */ height:0; }
+.videoWrapper2 { position:relative; padding-bottom: 25px; /* 2.35 */ height:0; }
 .videoWrapper2 iframe { position:absolute; top:0; left:0; width:100%; height:100%; }
 /* End Images
 --------------------------------------------------------------------------------------------------------*/
