--- a/css/styles.css
+++ b/css/styles.css
@@ -199,21 +199,14 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
  display: none;
 }
 
-.profile {
+#profile-pic {
   display: block;
   margin-left: auto;
   margin-right: auto;
   border-radius: 50%;
   width: 120px;
-  position: relative;
-   background-image: url( 
-"https://github.com/kaiweilee/portfolio/blob/master/image/keaton.jpg" ); 
+  position: relative; 
 }
-.profile:hover {
-  background-image: url( 
-"https://github.com/kaiweilee/portfolio/blob/master/image/vimeo.png" ); 
-}
-
 .bio-list {
  text-align: center;
  position:relative;
