--- a/css/styles.css
+++ b/css/styles.css
@@ -207,7 +207,7 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
   position: relative; 
 }
 .bio-list {
- text-align: center;
+ text-align: left;
  position:relative;
  top: 10px;
  }
