--- a/css/styles.css
+++ b/css/styles.css
@@ -207,9 +207,9 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
   position: relative; 
 }
 .bio-list {
- text-align: left;
+ text-align: center;
  position:relative;
- top: 10px;
+ top: 20px;
  }
 .bio-list .b1 {
   font-size: 14px;
@@ -226,6 +226,7 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
   font-size: 14px;
   color: #888;
   font-weight: 400;
+  bottom:20px;
  }
 
 #social-header { background:#fff; position:absolute; z-index:200; right:0; top:0; padding:15px 12px 0; /*width:50px; text-align:center*/ height:50px; }
