--- a/css/styles.css
+++ b/css/styles.css
@@ -229,7 +229,8 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
   bottom:20px;
  }
 .vimeo {
-  align: center;
+  display: flex;
+  align-items: center;
   position:relative;
   top: 20px;
 }
