--- a/css/styles.css
+++ b/css/styles.css
@@ -228,7 +228,7 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
   font-weight: 400;
   bottom:20px;
  }
-.vimeo {
+#vimeo-link {
   position:relative;
   left: 20px;
   top: 100px;
