--- a/css/styles.css
+++ b/css/styles.css
@@ -230,8 +230,8 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
  }
 .vimeo {
  position:relative;
- padding-top: 50px;
- padding-left: 50px;
+ margin-left: auto;
+ margin-top: 100px;
 }
 #social-header { background:#fff; position:absolute; z-index:200; right:0; top:0; padding:15px 12px 0; /*width:50px; text-align:center*/ height:50px; }
 /* End Main Nav
