--- a/css/styles.css
+++ b/css/styles.css
@@ -230,7 +230,7 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
  }
 #vimeo-link {
  position:relative;
- margin-left: 20px;
+ margin-left : auto;
  margin-top: 20px;
 }
 #social-header { background:#fff; position:absolute; z-index:200; right:0; top:0; padding:15px 12px 0; /*width:50px; text-align:center*/ height:50px; }
