--- a/css/styles.css
+++ b/css/styles.css
@@ -230,9 +230,10 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
  }
 #vimeo-link {
  position:relative;
- margin-left : auto;
+ display: block;
+ margin-left: auto;
  margin-right: auto;
- margin-top: 50px;
+ margin-top: 30px;
 }
 #social-header { background:#fff; position:absolute; z-index:200; right:0; top:0; padding:15px 12px 0; /*width:50px; text-align:center*/ height:50px; }
 /* End Main Nav
