--- a/css/styles.css
+++ b/css/styles.css
@@ -228,6 +228,14 @@ h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover {color:#2b2b2b }
   font-weight: 400;
   bottom:20px;
  }
+#imdb-link {
+ position:relative;
+ display: block;
+ margin-left: 2px;
+ margin-right: 2px;
+ margin-top: 50px;
+ text-align: center;
+}
 #vimeo-link {
  position:relative;
  display: block;
